--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ paycheckr is a fun package that I work on in my spare time. I am not getting pai
 
 I have tried to name variables in a consistent format, referring to the type of amount and the time interval it relates to.
 
-"Pay" in English can be both a noun and a verb. In this package I have tried not to use "pay" as a noun to mean the amount I am paid, and have instead called this value "income". This means "pay" can be used in function names as a verb. For example, the "pay_pension" function returns the amount of money I have to **pay** into my pension from my **income**.
+"Pay" in English can be both a noun and a verb. In this package I have tried not to use "pay" as a noun to mean the amount I am paid[^1], and have instead called this value "income". This means "pay" can be used in function names as a verb. For example, the "pay_pension" function returns the amount of money I have to **pay** into my pension from my **income**.
 
 **Categories**: workhours, income, paye (PAYE - income tax), pension and ni (National Insurance)
 
@@ -39,3 +39,5 @@ I have tried to name variables in a consistent format, referring to the type of 
 **Variable format**: interval_category_modifier
 
 **Examples**: weekly_ni, monthly_pension, annual_income_taxable
+
+[^1]: Except in the name of the package, but I say that's allowed and I make the rules round here.
